# webinar2ebook_v2

./: .gitignore  CLAUDE.md  spec2.md  spec4.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/corpora/: .gitignore  README.md  good_interview.md  good_marketing.md  good_philosophy.md  good_sensory_default.md  good_sensory_marketing.md  hard_many_names.md  hard_thin_prose.md  index.jsonl  meta_template.yaml  sample_draft.md
backend/scripts/: batch_eval.py  corpus_sources.md  e2e_sensory_test.py  groundedness_eval.py  ingest_public_transcript.md  ingest_transcript.py  measure_verbatim_overlap.py  real_corpus_eval.md  run_corpus.py  validate_canonical.py
backend/src/api/: exceptions.py  main.py  response.py
backend/src/corpus/: __init__.py  cache.py  draft_gen.py  reporters.py  runner.py  thresholds.py  validators.py
backend/src/db/: mongo.py
backend/src/llm/: __init__.py  client.py  errors.py  models.py  schemas.py
backend/src/models/: __init__.py  api_responses.py  draft_plan.py  edition.py  evidence_map.py  export_job.py  generation_job.py  project.py  qa_job.py  qa_report.py  rewrite_plan.py  style_config.py  style_config_migrations.py  theme_job.py  visuals.py
backend/src/services/: __init__.py  ai_service.py  canonical_service.py  coverage_service.py  draft_service.py  ebook_renderer.py  ebook_styles.py  entity_allowlist.py  epub_generator.py  epub_styles.py  evidence_service.py  export_job_store.py  file_service.py  gridfs_service.py  groundedness_service.py  image_utils.py  job_store.py  normalization.py  pdf_generator.py  project_service.py  prompts.py  qa_evaluator.py  qa_job_store.py  qa_semantic.py  qa_structural.py  quote_anchoring.py  rewrite_service.py  structural_invariants.py  theme_job_store.py  theme_proposal_service.py  visual_asset_service.py  whitelist_service.py  word_budget.py
backend/tests/: conftest.py  test_file_upload.py  test_projects.py
backend/tests/integration/: __init__.py  test_ai_endpoints.py  test_draft_generation.py  test_ebook_preview.py  test_epub_export.py  test_grounded_generation.py  test_groundedness_ci.py  test_ideas_edition_contract.py  test_ideas_edition_golden.py  (+6 more)
(+290 files in other folders)
